[package]
name = "bpf-tests"
version = "1.0.1"
edition = "2018"

[dependencies]
regex = "1.4.5"
structopt = { version = "0.3", default-features = false }
anyhow = "1.0"

#solana-bpf-loader-program = { git = "https://github.com/solana-labs/solana", version = "=1.9.0" }
#solana-logger = { git = "https://github.com/solana-labs/solana", version = "=1.9.0" }
#solana-program-runtime = { git = "https://github.com/solana-labs/solana", version = "=1.9.0" }
#solana-sdk = { git = "https://github.com/solana-labs/solana", version = "=1.9.0" }
#solana_rbpf = "=0.2.16"

solana-bpf-loader-program = { version = "=1.9.12", path = "../programs/bpf_loader", default_features = false }
solana-logger = { version = "=1.9.12", path = "../logger", default_features = false }
solana-program-runtime = { version = "=1.9.12", path = "../program-runtime", default_features = false }
solana-runtime = { version = "=1.9.12", path = "../runtime", default_features = false }
solana-sdk = { version = "=1.9.12", path = "../sdk", default_features = false }
solana_rbpf = "=0.2.24"


bincode = "1.3.3"
hex = "0.4.2"

evm = { git = "https://github.com/neonlabsorg/neon-evm", branch = "develop", default_features = false, features = ["tracing"] }
evm-loader = { git = "https://github.com/neonlabsorg/neon-evm", branch = "develop", default_features = false, features = ["tracing"] }




[[bin]]
name = "bpf-vm-tests"
path = "src/main.rs"
