[package]
name = "bpf-tests"
version = "1.0.1"
edition = "2018"

[dependencies]
regex = "1.4.5"
structopt = { version = "0.3", default-features = false }
anyhow = "1.0"

#solana-bpf-loader-program = { git = "https://github.com/solana-labs/solana", version = "=1.9.0" }
#solana-logger = { git = "https://github.com/solana-labs/solana", version = "=1.9.0" }
#solana-program-runtime = { git = "https://github.com/solana-labs/solana", version = "=1.9.0" }
#solana-sdk = { git = "https://github.com/solana-labs/solana", version = "=1.9.0" }
#solana_rbpf = "=0.2.16"

spl-token = { version = "3.2.0", default_features = false, features = ["no-entrypoint"] }

solana-bpf-loader-program = { version = "=1.9.12", path = "../programs/bpf_loader", default_features = false }
solana-logger = { version = "=1.9.12", path = "../logger", default_features = false }
solana-program-runtime = { version = "=1.9.12", path = "../program-runtime", default_features = false }
solana-runtime = { version = "=1.9.12", path = "../runtime", default_features = false }
solana-sdk = { version = "=1.9.12", path = "../sdk", default_features = false }
solana-program = { version = "=1.9.12", path = "../sdk/program", default_features = false }
solana_rbpf = "=0.2.24"

libsecp256k1 = { version = "0.6.0", default-features = false, features= ["static-context", "hmac"] }
bincode = "1.3.3"
hex = "0.4.2"

#evm = { git = "https://github.com/neonlabsorg/neon-evm", branch = "688_syscall_tracer_api", default_features = false }
#evm-loader = { git = "https://github.com/neonlabsorg/neon-evm", branch = "688_syscall_tracer_api", default_features = false }
evm = {version = "=0.18.0", path = "/home/user/CLionProjects/neonlabs/neon-evm/evm_loader/rust-evm", default_features = false, features = ["tracing"] }
#evm-loader = {version = "=0.7.6-dev",  path = "/home/user/CLionProjects/neonlabs/neon-evm/evm_loader/program", default_features = false, features = ["tracing"] }
evm-loader = {version = "=0.7.6-dev",  path = "/home/user/CLionProjects/neonlabs/neon-evm/evm_loader/program", default_features = false }
rlp = "0.5"
rand = "0.7.0"
arrayref = "0.3.6"

serde = "1.0.112"
serde_bytes = "0.11"
serde_derive = "1.0.103"
impl-serde = "0.1"




[[bin]]
name = "bpf-vm-tests"
path = "src/main.rs"
