[package]
name = "bpf-tests"
version = "1.0.1"
edition = "2018"

[dependencies]
regex = "1.4.5"
structopt = { version = "0.3", default-features = false }
anyhow = "1.0"

spl-token = { version = "3.1.0", default_features = false, features = ["no-entrypoint"] }

solana-bpf-loader-program = { version = "=1.9.12", path = "../programs/bpf_loader", default_features = false }
solana-logger = { version = "=1.9.12", path = "../logger", default_features = false }
solana-program-runtime = { version = "=1.9.12", path = "../program-runtime", default_features = false }
solana-runtime = { version = "=1.9.12", path = "../runtime", default_features = false }
solana-sdk = { version = "=1.9.12", path = "../sdk", default_features = false }
solana-program = { version = "=1.9.12", path = "../sdk/program", default_features = false }
solana_rbpf = "=0.2.24"

libsecp256k1 = { version = "0.6.0", default-features = false, features= ["static-context", "hmac"] }
bincode = "1.3.3"
hex = "0.4.2"

evm-loader = {version = "=0.7.6-dev",  path = "/home/user/CLionProjects/neonlabs/neon-evm/evm_loader/program", default_features = false, features = ["tracing"] }

rlp = "0.5"
rand = "0.7.0"
arrayref = "0.3.6"


[[bin]]
name = "bpf-vm-tests"
path = "src/main.rs"
