[package]
authors = ["Ivan Loboda <il@neonlabs.org>"]
edition = "2021"
name = "neon-dumper-plugin"
description = "The Solana AccountsDb plugin for PostgreSQL database."
version = "1.13.4"
repository = "https://github.com/neonlabs/neon-dumper-plugin"
license = "Apache-2.0"
homepage = "https://neon-labs.org/"
documentation = "https://docs.neon-labs.org/"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.4.0"
bytemuck = "1.12.2"
chrono = { version = "0.4.22", features = ["serde"] }
crossbeam-channel = "0.5.6"
log = "0.4.17"
openssl = { version = "0.10" }
postgres = { version = "0.19.4", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2.4", features = ["derive"] }
postgres-openssl = { version = "0.5.0"}
serde = "1.0.133"
serde_derive = "1.0.103"
serde_json = "1.0.74"
solana-geyser-plugin-interface = { path = "../geyser-plugin-interface", version = "=1.13.4" }
solana-logger = { path = "../logger", version = "=1.13.4" }
solana-measure = { path = "../measure", version = "=1.13.4" }
solana-metrics = { path = "../metrics", version = "=1.13.4" }
solana-runtime = { path = "../runtime", version = "=1.13.4" }
solana-sdk = { path = "../sdk", version = "=1.13.4" }
solana-transaction-status = { path = "../transaction-status", version = "=1.13.4" }
thiserror = "1.0.30"
tokio-postgres = "0.7.7"

[dev-dependencies]
libc = "0.2.112"
libloading = "0.7.2"
serial_test = "0.5.1"
solana-account-decoder = {  path = "../account-decoder", version = "=1.13.4" }
solana-core = {  path = "../core", version = "=1.13.4"  }
solana-local-cluster = {  path = "../local-cluster", vervsion = "=1.13.4" }
solana-net-utils = {  path = "../net-utils", version = "=1.13.4" }
solana-streamer = {  path = "../streamer", version = "=1.13.4" }
tempfile = "3.2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
