[package]
authors = ["Neon Labs"]
edition = "2021"
name = "neon-tracer"
description = "Neon Tracer"
version = "1.11.3"
repository = "https://github.com/neonlabsorg/solana"
license = "Apache-2.0"
homepage = "https://neon-labs.org/"
documentation = "https://docs.neon-labs.org/docs/developing/getting_started"
default-run = "neon-tracer"

[dependencies]
openssl = { version = "0.10" }
postgres = { version = "0.19.2", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2.2", features = ["derive"] }
postgres-openssl = { version = "0.5.0"}
solana-runtime = { path = "../runtime", version = "=1.11.3", features = ["tracer"] }

[target."cfg(unix)".dependencies]
libc = "0.2.126"
signal-hook = "0.3.14"